# clipsort

./: .gitignore  Dockerfile  Makefile  README.md  build  build.bat  clipsort  clipsort.bat  docker-compose.yml  pyproject.toml
docs/: DESIGN.md  LESSONS.md  PRD.md  ROADMAP.md
src/clipsort/: __init__.py  __main__.py  audio_detect.py  clapper_detect.py  cli.py  ocr.py  organizer.py  parser.py  qr_detect.py  qr_generate.py  reporter.py  scanner.py  splitter.py
tests/: conftest.py  test_audio_detect.py  test_clapper_detect.py  test_cli.py  test_ocr.py  test_organizer.py  test_parser.py  test_qr_detect.py  test_qr_generate.py  test_reporter.py  test_scanner.py  test_splitter.py
tests/fixtures/: README.md
tests/fixtures/clapper_boards/: manifest.json
