[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clipsort"
version = "0.1.0"
description = "Organize video clips into scene folders"
requires-python = ">=3.12"
dependencies = [
    "click>=8.0",
]

[project.scripts]
clipsort = "clipsort.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
    "pre-commit",
]
qr = [
    "opencv-python-headless>=4.8",
    "pyzbar>=0.1.9",
    "qrcode[pil]>=7.0",
    "fpdf2>=2.7",
]
ocr = [
    "opencv-python-headless>=4.8",
    "pytesseract>=0.3.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/clipsort"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
